# LASE

./: .gitignore
BiCodec/: .gitignore  README.md  pyproject.toml  train_bicodec.sh  train_bicodec_ddp.sh
BiCodec/configs/: train_bicodec_exp1.yaml  train_bicodec_exp2.yaml  train_bicodec_exp3.yaml
BiCodec/configs/base/: train_bicodec.yaml
BiCodec/data/manifests/: voxceleb2_valid.jsonl
BiCodec/src/bicodec/: __init__.py
BiCodec/src/bicodec/cli/: __init__.py  reconstruct.py  split_manifest.py  tokenize.py  train.py
BiCodec/src/bicodec/data/: __init__.py  collate.py  dataset.py  manifest.py  split.py
BiCodec/src/bicodec/models/: __init__.py  audio_tokenizer.py  bicodec.py
BiCodec/src/bicodec/modules/: __init__.py
BiCodec/src/bicodec/modules/blocks/: __init__.py
BiCodec/src/bicodec/modules/encoder_decoder/: __init__.py  feat_decoder.py  feat_encoder.py  wave_generator.py
BiCodec/src/bicodec/modules/fsq/: __init__.py  residual_fsq.py
BiCodec/src/bicodec/modules/speaker/: __init__.py  ecapa_tdnn.py  speaker_encoder.py
BiCodec/src/bicodec/modules/vq/: __init__.py
BiCodec/src/bicodec/training/: __init__.py  bicodec_trainer.py  setup.py
BiCodec/src/bicodec/training/losses/: __init__.py  adversarial.py  reconstruction.py
BiCodec/src/bicodec/utils/: __init__.py  config.py  file.py  jsonl.py  layout.py
BiCodec/tests/: test_config_loading.py  test_manifest_loading.py  test_manifest_split.py
Spark-TTS/: train_bicodec.sh  train_bicodec_ddp.sh
Spark-TTS/cli/: inference.py  train_bicodec.py  train_bicodec_ddp.py
evaluation/: evaluation.py
(+20 files in other folders)
